# FontLegibilityBenchmarking

./: Pride_and_Prejudice.txt  README.md  Ruumiin_Elimista.txt  main.py  main.spec  pyproject.toml
.github/workflows/: release.yml
